西漢筆記圖表摘出

--- a/3_專項研究/3.2_通用/秦漢三公九卿概要.html
+++ b/3_專項研究/3.2_通用/秦漢三公九卿概要.html
@@ -135,6 +135,33 @@
 </tr>
 </tbody>
 </table>
+<h1 id="漢哀帝時期新三公分職">漢哀帝時期新三公分職 </h1>
+<table>
+<thead>
+<tr>
+<th>名稱</th>
+<th>原名</th>
+<th>職責</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>大司馬</td>
+<td>太尉</td>
+<td>掌兵事</td>
+</tr>
+<tr>
+<td>大司徒</td>
+<td>丞相</td>
+<td>掌人民事</td>
+</tr>
+<tr>
+<td>大司空</td>
+<td>御史大夫</td>
+<td>掌水土事</td>
+</tr>
+</tbody>
+</table>
 
       </div>
       
