--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <summary>核心統治政權</summary>
 <ul>
 <li>戰國秦：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%88%B0%E5%9C%8B%E7%A7%A6/%E8%A5%BF%E6%A5%9A%E4%B8%96%E7%B3%BB%E5%9C%96.html">西楚</a></li>
-<li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">西漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">東漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%BC%A2%E5%85%83%E7%8E%8B%E8%8E%BD%E4%B8%96%E7%B3%BB%E5%9C%96.html">漢元王莽</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%85%A9%E6%BC%A2%E5%8A%89%E6%B0%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">兩漢劉氏</a></li>
+<li>漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">西漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%9D%B1%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">東漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%BC%A2%E6%AD%A6%E5%B8%9D%E5%AD%90%E5%97%A3.html">漢武帝子嗣</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E6%BC%A2%E5%85%83%E7%8E%8B%E8%8E%BD%E4%B8%96%E7%B3%BB%E5%9C%96.html">漢元王莽</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E6%BC%A2/%E5%85%A9%E6%BC%A2%E5%8A%89%E6%B0%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">兩漢劉氏</a></li>
 <li>魏晉：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%9B%B9%E9%AD%8F%E4%B8%96%E7%B3%BB%E5%9C%96.html">曹魏</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E8%9C%80%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96.html">蜀漢</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E5%AD%AB%E5%90%B3%E4%B8%96%E7%B3%BB%E5%9C%96.html">孫吳</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.1_%E5%B8%9D%E7%8E%8B/%E9%AD%8F%E6%99%89/%E6%99%89%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">晉朝</a></li>
 <li>南北朝
 <ul>
@@ -160,8 +160,8 @@
 <details open="">
 <summary>影響較大的家族</summary>
 <ul>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E5%AD%94%E5%AD%90%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">孔子</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E7%A7%A6%E6%9C%9D%E5%90%8D%E5%B0%87%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">秦朝名將</a></li>
-<li><a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E8%AB%B8%E5%91%82%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">諸呂</a></li>
+<li>先秦及秦：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E5%AD%94%E5%AD%90%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">孔子</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E7%A7%A6%E6%9C%9D%E5%90%8D%E5%B0%87%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">秦朝名將</a></li>
+<li>西漢：<a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E8%AB%B8%E5%91%82%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">諸呂</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E8%87%A7%E5%85%92%E7%94%B0%E7%AB%87%E9%97%9C%E4%BF%82%E5%9C%96.html">田竇</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E8%A1%9B%E9%9C%8D%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8.html">衛霍</a> | <a href="2_%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8/2.3_%E4%B8%96%E5%AE%B6%E5%A4%A7%E6%97%8F/%E9%87%91%E6%97%A5%E7%A3%BE%E7%8F%AD%E5%BD%AA%E4%B8%96%E7%B3%BB%E5%9C%96.html">金日磾班彪</a></li>
 </ul>
 </details>
 </details>
@@ -173,11 +173,18 @@
 <details open="">
 <summary>針對特定時代的內容</summary>
 <ul>
+<li>上古：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E4%B8%8A%E5%8F%A4/%E8%88%9C%E5%91%BD%E4%B9%9D%E5%AE%98.html">舜命九官</a></li>
 <li>周：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E5%95%86%E9%9E%85%E4%BA%8C%E5%8D%81%E7%AD%89%E7%88%B5%E8%A1%A8.html">商鞅二十等爵表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E6%A5%9A%E5%9C%8B%E9%83%BD%E5%9F%8E%E8%88%87%E5%90%84%E7%A8%AE%E9%83%A2%E9%83%BD%E8%A1%A8.html">楚國都城與各種郢都表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E5%91%A8/%E9%9F%93%E5%9C%8B%E9%83%BD%E5%9F%8E%E8%AE%8A%E9%81%B7%E8%A1%A8.html">韓國都城變遷表</a></li>
 <li>秦：<a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末地圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E7%A7%A6/%E7%A7%A6%E6%9C%AB%E6%BC%A2%E5%88%9D%E6%94%BF%E6%AC%8A%E9%80%97%E9%80%BC%E5%88%86%E8%A3%82%E5%9C%96.html">秦末漢初政權逗逼分裂圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E7%A7%A6/%E9%9F%93%E4%BF%A1%E6%88%B0%E5%BD%B9%E8%A1%A8.html">韓信戰役表</a></li>
-<li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a>
+<li>西漢：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E9%BA%92%E9%BA%9F%E9%96%A3%E5%8D%81%E4%B8%80%E5%8A%9F%E8%87%A3.html">麒麟閣十一功臣</a>
 <ul>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A9%94%E6%9B%B8%E5%BD%A2%E5%BC%8F%E8%A1%A8.html">詔書形式</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E9%A9%9B%E7%AB%99%E4%BA%A4%E9%80%9A%E8%A6%8F%E6%A0%BC%E8%A1%A8.html">驛站交通規格</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%9A%87%E5%B8%9D%E7%94%9F%E5%89%8D%E5%BB%9F%E5%90%8D.html">皇帝生前廟名</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%A4%A7%E5%A4%AB%E7%BD%AA%E5%90%8D%E8%A1%A8.html">大夫罪名</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E4%B8%83%E5%9C%8B%E4%B9%8B%E4%BA%82%E9%97%9C%E4%BF%82%E5%9C%96.html">七國之亂關係圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%B7%AE%E5%8D%97%E8%A1%A1%E5%B1%B1%E8%AC%80%E5%8F%8D%E9%97%9C%E4%BF%82%E5%9C%96.html">淮南衡山謀反關係圖</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%AD%A6%E5%B8%9D%E6%99%82%E6%9C%9F%E6%BC%A2%E5%8C%88%E9%87%8D%E8%A6%81%E6%88%B0%E5%BD%B9.html">武帝時期漢匈重要戰役</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%AD%A6%E5%8A%9F%E7%88%B5%E8%A1%A8.html">武功爵表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%A1%91%E5%BC%98%E7%BE%8A%E6%96%82%E8%B2%A1%E6%94%BF%E7%AD%96.html">桑弘羊斂財政策</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%AD%A6%E5%B8%9D%E8%A5%BF%E5%8D%97%E8%AB%B8%E5%A4%B7%E8%A1%A8.html">武帝西南諸夷表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E4%BA%94%E5%96%AE%E4%BA%8E%E7%88%AD%E7%AB%8B.html">五單于爭立</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E4%BA%94%E7%88%AD%E8%BB%8A%E5%B8%AB%E8%A1%A8.html">五爭車師表</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%93%8B%E9%95%B7%E5%85%AC%E4%B8%BB.html">蓋長公主</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E4%B8%8A%E5%AE%98%E7%9A%87%E5%90%8E.html">上官皇后</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A8%B1%E5%B9%B3%E5%90%9B%E9%97%9C%E4%BF%82%E5%9C%96.html">許平君</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%82%85%E4%B8%81%E5%A4%AA%E5%90%8E%E9%97%9C%E4%BF%82%E5%9C%96.html">傅丁太后</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E5%B8%9D%E7%8E%8B%E7%94%B7%E5%AF%B5%E8%A1%A8.html">西漢帝王男寵表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%B9%B3%E9%99%BD%E4%BE%AF%E6%9B%B9%E6%B0%8F%E9%97%9C%E4%BF%82%E5%9C%96.html">平陽侯曹氏關係圖</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E9%A6%AE%E5%A5%89%E4%B8%96%E9%97%9C%E4%BF%82%E5%9C%96.html">馮奉世關係圖</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E6%AD%A6%E5%B8%9D%E6%99%82%E6%9C%9F%E5%90%84%E5%85%AC%E5%AD%AB.html">武帝時期各公孫</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%99%BD%E9%B9%BF%E7%9A%AE%E5%B9%A3.html">白鹿皮幣</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%95%AD%E5%8F%B2%E9%BB%A8%E7%88%AD%E8%A1%A8.html">蕭史黨爭表</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A9%94%E6%9B%B8%E5%BD%A2%E5%BC%8F%E8%A1%A8.html">詔書形式</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E9%A9%9B%E7%AB%99%E4%BA%A4%E9%80%9A%E8%A6%8F%E6%A0%BC%E8%A1%A8.html">驛站交通規格</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E7%9A%87%E5%B8%9D%E7%94%9F%E5%89%8D%E5%BB%9F%E5%90%8D.html">皇帝生前廟名</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%A4%A7%E5%A4%AB%E7%BD%AA%E5%90%8D%E8%A1%A8.html">大夫罪名</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E5%85%B5%E5%BD%B9%E9%A1%9E%E5%9E%8B.html">兵役類型</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E7%B6%AC%E5%B8%B6%E9%A1%8F%E8%89%B2.html">綬帶顏色</a></li>
 </ul>
 </li>
 <li>新：<a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.1_%E6%99%82%E4%BB%A3/%E6%96%B0/%E7%8E%8B%E8%8E%BD%E5%AF%B6%E8%B2%A8%E5%88%B6.html">王莽寶貨制</a></li>
@@ -193,9 +200,10 @@
 <ul>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%B2%97%E7%B7%9A%E6%A2%9D%E6%AD%B7%E5%8F%B2%E6%9C%9D%E4%BB%A3%E8%A1%A8.html">粗線條歷史朝代表</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%9B%9C%E5%A2%93%E8%A1%A8.html">盜墓表</a></li>
 <li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E6%AD%B7%E4%BB%A3%E6%AD%B2%E9%A6%96%E8%A1%A8.html">歷代歲首表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%BD%97%E6%98%9F.html">彗星</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E8%AA%9E%E5%B0%8D%E7%85%A7%E8%A1%A8.html">匈奴語對照表</a></li>
-<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%91%A8%E7%A6%AE%E5%AE%B4%E8%AB%8B%E7%AD%89%E7%B4%9A%E8%A1%A8.html">周禮宴請等級表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%A7%A6%E6%BC%A2%E4%B8%89%E5%85%AC%E4%B9%9D%E5%8D%BF%E6%A6%82%E8%A6%81.html">秦漢三公九卿概要</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E8%AA%9E%E5%B0%8D%E7%85%A7%E8%A1%A8.html">匈奴語對照表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%8C%88%E5%A5%B4%E5%AE%98%E5%88%B6%E8%A1%A8.html">匈奴官制表</a></li>
+<li><a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%91%A8%E7%A6%AE%E5%AE%B4%E8%AB%8B%E7%AD%89%E7%B4%9A%E8%A1%A8.html">周禮宴請等級表</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%A7%A6%E6%BC%A2%E4%B8%89%E5%85%AC%E4%B9%9D%E5%8D%BF%E6%A6%82%E8%A6%81.html">秦漢三公九卿概要</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E7%89%A2%E7%8D%84%E5%88%A5%E7%A8%B1.html">牢獄別稱</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E5%A2%B3%E5%BD%A2%E5%88%B6.html">墳形制</a> | <a href="3_%E5%B0%88%E9%A0%85%E7%A0%94%E7%A9%B6/3.2_%E9%80%9A%E7%94%A8/%E4%B9%9D%E9%8C%AB.html">九錫</a></li>
 </ul>
 </details>
 </details>
@@ -373,8 +381,8 @@
 <td>漢紀八</td>
 <td>-154</td>
 <td>-141</td>
-<td>七國之亂世系圖、臧兒田竇世系圖</td>
-<td>漢兵役類型(昭帝紀注)</td>
+<td></td>
+<td></td>
 <td>漢景帝3年至16年</td>
 </tr>
 <tr>
@@ -383,8 +391,8 @@
 <td>漢紀九</td>
 <td>-140</td>
 <td>-134</td>
-<td>衛霍裙帶世系</td>
-<td>牢獄別稱</td>
+<td></td>
+<td></td>
 <td>漢武帝至7年</td>
 </tr>
 <tr>
@@ -394,7 +402,7 @@
 <td>-133</td>
 <td>-125</td>
 <td></td>
-<td>武帝時期漢匈重要戰役</td>
+<td></td>
 <td>漢武帝8年至16年</td>
 </tr>
 <tr>
@@ -403,8 +411,8 @@
 <td>漢紀十一</td>
 <td>-124</td>
 <td>-119</td>
-<td>淮南衡山謀反世系、死守外戚的平陽侯曹氏</td>
-<td>武功爵表、張騫兩次探索各國紀要、白鹿皮幣</td>
+<td></td>
+<td></td>
 <td>漢武帝17年至22年</td>
 </tr>
 <tr>
@@ -434,7 +442,7 @@
 <td>-98</td>
 <td>-87</td>
 <td></td>
-<td>漢朝匈奴官制、漢武帝子嗣、人臣功五品</td>
+<td></td>
 <td>漢武帝43年至54年</td>
 </tr>
 <tr>
@@ -443,7 +451,7 @@
 <td>漢紀十五</td>
 <td>-86</td>
 <td>-75</td>
-<td>匈奴五單于爭立背景、假設蓋主嫁王充、上官皇后世系</td>
+<td></td>
 <td></td>
 <td>漢昭帝至12年</td>
 </tr>
@@ -453,8 +461,8 @@
 <td>漢紀十六</td>
 <td>-74</td>
 <td>-68</td>
-<td>漢武帝子嗣皇帝示意圖、霍光世系</td>
-<td>西漢綬帶顏色、各時代盜墓信息</td>
+<td></td>
+<td></td>
 <td>漢昭帝13年、漢廢帝、漢宣帝至6年</td>
 </tr>
 <tr>
@@ -483,8 +491,8 @@
 <td>漢紀十九</td>
 <td>-58</td>
 <td>-49</td>
-<td>麒麟閣十一功臣成分</td>
-<td>五單于爭立表</td>
+<td></td>
+<td></td>
 <td>漢宣帝16年至25年</td>
 </tr>
 <tr>
@@ -494,7 +502,7 @@
 <td>-48</td>
 <td>-42</td>
 <td></td>
-<td>蕭史黨爭表、舜命九官（尚書）</td>
+<td></td>
 <td>漢元帝至7年</td>
 </tr>
 <tr>
@@ -503,7 +511,7 @@
 <td>漢紀二十一</td>
 <td>-41</td>
 <td>-33</td>
-<td>金日磾及班彪世系</td>
+<td></td>
 <td></td>
 <td>漢元帝8年至16年</td>
 </tr>
@@ -513,7 +521,7 @@
 <td>漢紀二十二</td>
 <td>-32</td>
 <td>-23</td>
-<td>呼韓邪世系</td>
+<td></td>
 <td></td>
 <td>漢成帝至10年</td>
 </tr>
@@ -523,8 +531,8 @@
 <td>漢紀二十三</td>
 <td>-22</td>
 <td>-14</td>
-<td>許平君世系、班氏世系</td>
-<td>墳形製</td>
+<td></td>
+<td></td>
 <td>漢成帝11年19年</td>
 </tr>
 <tr>
@@ -533,7 +541,7 @@
 <td>漢紀二十四</td>
 <td>-13</td>
 <td>-8</td>
-<td>馮奉世世系</td>
+<td></td>
 <td></td>
 <td>漢成帝20年至25年</td>
 </tr>
@@ -543,7 +551,7 @@
 <td>漢紀二十五</td>
 <td>-7</td>
 <td>-6</td>
-<td>傅丁太后世系</td>
+<td></td>
 <td></td>
 <td>漢成帝26年、漢哀帝元年</td>
 </tr>
@@ -554,7 +562,7 @@
 <td>-5</td>
 <td>-3</td>
 <td></td>
-<td>西漢帝王男寵表</td>
+<td></td>
 <td>漢哀帝2年至4年</td>
 </tr>
 <tr>
@@ -563,8 +571,8 @@
 <td>漢紀二十七</td>
 <td>-2</td>
 <td>2</td>
-<td>衛子夫後衛氏世系</td>
-<td>新三公分職</td>
+<td></td>
+<td></td>
 <td>漢哀帝5年至6年、漢平帝至2年</td>
 </tr>
 <tr>
@@ -574,7 +582,7 @@
 <td>3</td>
 <td>8</td>
 <td></td>
-<td>九錫之法</td>
+<td></td>
 <td>漢平帝3年至6年、王莽居攝、始初至3年</td>
 </tr>
 <tr>
