完成腳本工具優化，去掉冗餘數據

--- a/tools/era_name/era_name.html
+++ b/tools/era_name/era_name.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>年號查詢工具</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="era_name.css">
 </head>
 <body>
     
@@ -21,6 +21,6 @@
     <pre id="txt_result"></pre>
 
     <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-    <script src="main.js"></script>
+    <script src="era_name.js"></script>
 </body>
 </html>
