年號表查詢功能添加

--- a/tools/era_name/era_name.html
+++ b/tools/era_name/era_name.html
@@ -12,9 +12,10 @@
 
     <h2>年號查詢工具</h2>
 
-    <p>輸入公元年，可以查詢到<a href="../../1_數據表/1.3_各類通表/年號總表.html">年號總表</a>中所記録的所有當年年號的信息。<br/></p>
+    <p>查詢<a href="../../1_數據表/1.3_各類通表/年號總表.html">年號總表</a>中的年號相關信息。<br/>
+    輸入空值可查看說明。</p>
 
-    <input type="text" id="txt_input" placeholder="輸入有效的公元年數字">
+    <input type="text" id="txt_input" placeholder="輸入查詢指令">
     <button id="btn_run">查詢</button><br><br>
 
     <h3>結果：</h3>
