--- a/tools/person/person.html
+++ b/tools/person/person.html
@@ -13,16 +13,7 @@
     <h2>人物總表查詢工具</h2>
 
     <p>實現<a href="../../1_數據表/1.3_各類通表/人物總表.html">人物總表</a>內的查詢功能。<br/>
-    <details>
-    <summary>查詢指令示例</summary>
-    查詢張讓的信息：張讓<br/>
-    司馬遷的詳細信息：@司馬遷<br/>
-    只知道人物和後漢書有關，不知道哪方面有關：*後漢書<br/>
-    蜀漢的統治者：統治政權：蜀漢<br/>
-    表字為仲達或子上的：字：仲達or字：子上<br/>
-    和仇池政權有關的：統治政權：仇池or從屬政權：仇池<br/>
-    北魏的女性：從屬政權：北魏and女性：1<br/>
-    </details></p>
+    輸入空值可查看說明。</p>
     
     <input type="text" id="txt_input" placeholder="輸入查詢指令">
     <button id="btn_run">查詢</button><br><br>
