--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -55,7 +55,7 @@
 <li>被人嚇死：馮跋</li>
 <li>醉死：劉曜、禿髪烏孤</li>
 <li>被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）</li>
-<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
+<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父</li>
 <li>忠臣食盡：荀彧、劉穆之</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
@@ -89,7 +89,7 @@
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
 <li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
-<li>矬：周舉、張松、朱然、宋配、何尚之、顔延之</li>
+<li>矬：周舉、張松、朱然、宋配、何尚之、顔延之、陸俟</li>
 <li>慫：韓馥、尉建</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
 <li>被污早年失德：陳平、直不疑、第五倫</li>
@@ -110,6 +110,7 @@
 <li>出使持節：蘇武、于什門、隗仁</li>
 <li>猶豫不決：甘卓、劉牢之</li>
 <li>死前暴擊：項羽、段文鴦、冉閔</li>
+<li>捨身護主：典韋、周泰、陳建</li>
 <li>強力刺客：公孫述、任尚</li>
 <li>神射手：養由基、呂布、賈堅</li>
 <li>漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮</li>
