--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -134,12 +134,13 @@
 <li>盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
 <li>裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、慕容超、朱棣</li>
 <li>裝死大師：齊桓公、杜根</li>
-<li>裝病大師：司馬懿、衛瓘、王戎</li>
+<li>裝病大師：司馬懿、衛瓘、王戎、殷景仁</li>
 <li>裝醉大師：王允之</li>
 <li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成</li>
 <li>黑皮: 李陵容</li>
 <li>高頻率犯罪：劉賀、劉立</li>
 <li>背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真、姚聳夫</li>
+<li>殺妻食軍：沮渠天周</li>
 <li>殺子：石碏、金日磾、漢成帝、王立、王莽、袁齊媯、焦遺</li>
 <li>殺兄入嫂：齊桓公、李世民</li>
 <li>狗屎運：王興、王盛、黃耇、吳平</li>
