--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -79,7 +79,7 @@
 <li>壁中藏書：孔鮒、伏生、陳寵曾祖陳咸</li>
 <li>壁中藏人：梁伯玉、趙歧、袁閎、伏皇后</li>
 <li>相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅</li>
-<li>感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖、姚襄</li>
+<li>感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖、姚襄、劉道產</li>
 <li>舍身為民：魏咎、劉璋</li>
 <li>反戰為民：鞠彭</li>
 <li>空城計：叔詹、趙雲、曹操、文聘、蕭承之、王思政、祖珽、李元軌、德川家康</li>
