--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -47,14 +47,14 @@
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
 <li>嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸</li>
 <li>疽發背死：范增、劉焉、曹休、庾悅</li>
-<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮</li>
+<li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮、鄭羆之子</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠、姚佛念</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
 <li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗</li>
 <li>被人嚇死：馮跋</li>
 <li>醉死：劉曜、禿髪烏孤</li>
-<li>被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）</li>
+<li>被子悶死：晉孝武帝、晉恭帝、劉義康、嘉靖（未遂）</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父</li>
 <li>忠臣食盡：荀彧、劉穆之</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
@@ -128,6 +128,7 @@
 <li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子</li>
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
 <li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌</li>
+<li>帝王宗室殺手：趙高、靳準、宗愛</li>
 <li>屠伯：嚴延年、苟晞</li>
 <li>食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混</li>
 <li>零食達人：王敦、王安石</li>
