--- a/tools/era_name/era_name.html
+++ b/tools/era_name/era_name.html
@@ -5,23 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>年號查詢工具</title>
     <link rel="stylesheet" href="era_name.css">
+    <script type="text/javascript" src="../brython/brython.min.js"></script>
+    <script type="text/javascript" src="../brython/brython_stdlib.js"></script>
 </head>
-<body>
-    
-    <p><a href="../../index.html">返回首頁</a></p>
-
-    <h2>年號查詢工具</h2>
-
-    <p>查詢<a href="../../1_數據表/1.3_各類通表/年號總表.html">年號總表</a>中的年號相關信息。<br/>
-    輸入空值可查看說明。</p>
-
-    <input type="text" id="txt_input" placeholder="輸入查詢指令">
-    <button id="btn_run">查詢</button><br><br>
-
-    <h3>結果：</h3>
-    <pre id="txt_result"></pre>
-
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-    <script src="era_name.js"></script>
+<body onload="brython(1)">
+    <script type="text/python" src="era_name.bry.py"></script>
 </body>
 </html>
