--- a/tools/person/person.html
+++ b/tools/person/person.html
@@ -21,7 +21,7 @@
     <h3>結果：</h3>
     <pre id="txt_result"></pre>
 
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
+    <script src="../pyodide/pyodide.js"></script>
     <script src="person.js"></script>
 </body>
 </html>
