更新至卷127節5

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -108,7 +108,7 @@
 <li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
 <li>反復搖擺：徐龕、王擢、十六國張平、李辯、韋華</li>
 <li>出使持節：蘇武、于什門、隗仁</li>
-<li>猶豫不決：甘卓、劉牢之</li>
+<li>猶豫不決：甘卓、劉牢之、宋文帝</li>
 <li>死前暴擊：項羽、段文鴦、冉閔</li>
 <li>捨身護主：典韋、周泰、陳建</li>
 <li>強力刺客：公孫述、任尚</li>
