項目結構整理，去掉brython，全部改用pyodide

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1 id="資治通鑑學習筆記">資治通鑑學習筆記 </h1>
 <blockquote>
 <p>基於數據製作的一些速查工具<br>
-<a href="./tools/era_name/era_name.html">年號查詢</a> | <a href="./tools/person/person.html">人物總表查詢</a></p>
+<a href="history/tools/era_name/era_name.html">年號查詢</a> | <a href="history/tools/person/person.html">人物總表查詢</a></p>
 </blockquote>
 <h2 id="1-數據表">1 數據表 </h2>
 <details open="">
@@ -339,7 +339,6 @@
 <li><a href="https://mermaid-js.github.io/mermaid/#/">mermaid</a>：可嵌入markdown的圖表快速製作工具</li>
 <li><a href="https://shd101wyy.github.io/markdown-preview-enhanced/#/">markdown preview enhanced</a>：markdown插件，即時預覽及轉html</li>
 <li><a href="https://pypi.org/project/csvtotable/">csvtotable</a>：Python擴展包，csv轉html，支持分頁、搜索、排序等功能</li>
-<li><a href="https://www.codeconvert.ai/python-to-javascript-converter">codeconvert.ai</a>：可以將python腳本完美轉化為javascript</li>
 <li><a href="https://pyodide.org/en/stable/">Pyodide</a>：可以在網頁中使用python</li>
 </ul>
 </li>
