--- a/history/tools/era_name/era_name.html
+++ b/history/tools/era_name/era_name.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>年號查詢工具</title>
     <link rel="stylesheet" href="era_name.css">
+    <link rel="icon" href="../../asset/zztj32.svg" sizes="32x32">
 </head>
 <body>
     
-    <p><a href="../../../index.html">返回首頁</a></p>
+    <p><a href="../../../index.html"><img src="../../asset/zztj32.svg" height="16">返回首頁</a></p>
 
     <h2>年號查詢工具</h2>
 
