--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -57,6 +57,7 @@
 <li>被子悶死：晉孝武帝、晉恭帝、劉義康、嘉靖（未遂）</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父</li>
 <li>忠臣食盡：荀彧、劉穆之</li>
+<li>不給皇帝開門：郅惲、謝莊</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
 <li>清醒子女：胡毋謙之、張韙</li>
@@ -97,8 +98,7 @@
 <li>狗監：楊得意</li>
 <li>牧豬：公孫弘、吳祐、公沙穆</li>
 <li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑</li>
-<li>牧羊：楚義帝、卜式、路溫舒、劉盆子</li>
-<li>牧牛：鄧艾</li>
+<li>牧羊牧牛：楚義帝、卜式、路溫舒、劉盆子、鄧艾、游明根</li>
 <li>賣鞋：劉備、慕容永、劉裕</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進</li>
 <li>屠夫家皇后：何皇后、謝玖</li>
