--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -73,7 +73,7 @@
 <li>口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬</li>
 <li>狐臭：楚懷王</li>
 <li>脫髮: 王莽、曹丕</li>
-<li>酒糟鼻: 王慧龍</li>
+<li>酒糟鼻: 王慧龍、宋孝武帝</li>
 <li>消渴(糖尿病)：司馬相如</li>
 <li>羸瘵(肺結核)：賀循</li>
 <li>陽痿：膠西王劉端、司馬保</li>
@@ -129,7 +129,7 @@
 <li>娘砲：李固、曹植、何晏、崔浩、唐伯虎</li>
 <li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子</li>
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
-<li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越</li>
+<li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越、劉子業</li>
 <li>娛樂至死：劉渾</li>
 <li>帝王宗室殺手：趙高、靳準、宗愛</li>
 <li>屠伯：嚴延年、苟晞</li>
@@ -157,9 +157,11 @@
 <li>女智謀家：辛憲英、習英習</li>
 <li>女刺客：女艾、前秦楊皇后、張貴人</li>
 <li>誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后</li>
-<li>女權主義者：程咸</li>
+<li>女權主義者：程咸、劉楚玉</li>
 <li>被姦尸：呂后、漢桓帝馮貴人、苻訓英</li>
 <li>群姦亂國：夏姬、叱洛侯少妻</li>
+<li>被強姦男性：褚淵</li>
+<li>眼白大：褚淵</li>
 <li>白眉：劉曜</li>
 <li>紅眼：劉曜</li>
 <li>重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武</li>
