更新至卷130節7

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -54,7 +54,7 @@
 <li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗</li>
 <li>被人嚇死：馮跋</li>
 <li>醉死：劉曜、禿髪烏孤</li>
-<li>被子悶死：晉孝武帝、晉恭帝、劉義康、嘉靖（未遂）</li>
+<li>被子悶死：晉孝武帝、晉恭帝、劉義康、沈慶之、嘉靖（未遂）</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父</li>
 <li>忠臣食盡：荀彧、劉穆之</li>
 <li>不給皇帝開門：郅惲、謝莊</li>
@@ -68,7 +68,7 @@
 <li>愚孝：祖己、孫性、李班</li>
 <li>愚忠：弘演、王累、羅企生、張禕、賀弼</li>
 <li>摳門：樊伷、曹洪、司馬騰、慕容評</li>
-<li>給君主獻孕婦：呂不韋、春申君</li>
+<li>給君主獻孕婦：呂不韋、春申君、劉曚</li>
 <li>龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡</li>
 <li>口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬</li>
 <li>狐臭：楚懷王</li>
