更新至卷131節5

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -175,7 +175,7 @@
 <li>萬人迷：黃憲、溫嶠</li>
 <li>死忠老外：金日磾、呼尤徽、段匹磾、楊盛、源賀</li>
 <li>友方中的前朝忠良∶孝平王皇后、司馬孚</li>
-<li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴</li>
+<li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴、高閭</li>
 <li>女王范兒：郭女王、袁女皇</li>
 <li>不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞</li>
 <li>自築小屋：袁閎、申屠蟠</li>
