部分人物添加

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -107,7 +107,7 @@
 <li>刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)</li>
 <li>神童：后稷、項橐、甘羅、孔融、曹沖、周不疑</li>
 <li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
-<li>反復搖擺：徐龕、王擢、十六國張平、李辯、韋華</li>
+<li>反復搖擺：徐龕、王擢、十六國張平、李辯、韋華、薛安都</li>
 <li>出使持節：蘇武、于什門、隗仁</li>
 <li>猶豫不決：甘卓、劉牢之、宋文帝</li>
 <li>死前暴擊：項羽、段文鴦、冉閔</li>
@@ -131,7 +131,7 @@
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
 <li>變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越、劉子業</li>
 <li>娛樂至死：劉渾</li>
-<li>帝王宗室殺手：趙高、靳準、宗愛</li>
+<li>帝王宗室殺手：趙高、靳準、宗愛、劉休仁</li>
 <li>屠伯：嚴延年、苟晞</li>
 <li>食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混</li>
 <li>零食達人：王敦、王安石</li>
