更新至卷132節3

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -210,7 +210,7 @@
 <li>欒巴：凈身不徹底的宦官，娶妻生子，名列八使</li>
 <li>三姓皇后：鄧猛女</li>
 <li>減肥困難：王戎子王綏<code>有美号而太肥，戎令食糠，而肥愈甚也。</code></li>
-<li>斷指舟中可掬：邲之戰、李郭之亂</li>
+<li>斷指舟中可掬：邲之戰、李郭之亂、尉元薛安都破張永之戰</li>
 <li>孝感動天與祖己流放曾子挨打；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國</li>
 </ul>
 
