更新至卷133節5

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -50,6 +50,7 @@
 <li>自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮、鄭羆之子</li>
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠、姚佛念</li>
+<li>抱石投河：申屠狄、屈原</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
 <li>被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗</li>
 <li>被人嚇死：馮跋</li>
@@ -77,7 +78,7 @@
 <li>消渴(糖尿病)：司馬相如</li>
 <li>羸瘵(肺結核)：賀循</li>
 <li>陽痿：膠西王劉端、司馬保、宋明帝</li>
-<li>吮癰舐痔：鄧通、李班</li>
+<li>吮癰舐痔：鄧通、李班、魏孝文帝</li>
 <li>壁中藏書：孔鮒、伏生、陳寵曾祖陳咸</li>
 <li>壁中藏人：梁伯玉、趙歧、袁閎、伏皇后</li>
 <li>相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅</li>
@@ -90,8 +91,8 @@
 <li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
-<li>醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
-<li>矬：周舉、張松、朱然、宋配、何尚之、顔延之、陸俟</li>
+<li>醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
+<li>矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟</li>
 <li>慫：韓馥、尉建、范曄、劉義恭</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
 <li>被污早年失德：陳平、直不疑、第五倫</li>
@@ -164,12 +165,17 @@
 <li>眼白大：褚淵</li>
 <li>白眉：劉曜</li>
 <li>紅眼：劉曜</li>
-<li>重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武</li>
+<li>重瞳：堯、舜、項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武</li>
 <li>三乳：李淵</li>
 <li>大頭：苻雄</li>
 <li>頭鋭：古弼</li>
+<li>青面：皋陶</li>
 <li>豁牙：慕容垂</li>
 <li>兔唇: 魏詠之</li>
+<li>秃頭：孫叔敖</li>
+<li>滿臉鬍鬚：閎夭</li>
+<li>駝背：傅說</li>
+<li>無毛：伊尹</li>
 <li>巨人：阮翁仲、巨毋霸</li>
 <li>魔術師：黎軒善眩人、海西幻人</li>
 <li>萬人迷：黃憲、溫嶠</li>
