更新至卷133節8

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -103,7 +103,7 @@
 <li>牧羊牧牛：楚義帝、卜式、路溫舒、劉盆子、鄧艾、游明根</li>
 <li>賣鞋：劉備、慕容永、劉裕</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進</li>
-<li>屠夫家皇后：何皇后、謝玖</li>
+<li>屠夫家皇后：何皇后、謝玖、陳妙登</li>
 <li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
 <li>刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)</li>
 <li>神童：后稷、項橐、甘羅、孔融、曹沖、周不疑</li>
