更新人物至卷134節10

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -182,6 +182,8 @@
 <li>魔術師：黎軒善眩人、海西幻人</li>
 <li>萬人迷：黃憲、溫嶠</li>
 <li>死忠老外：金日磾、呼尤徽、段匹磾、楊盛、源賀</li>
+<li>豬隊友：劉秉</li>
+<li>我叫不緊張：劉秉</li>
 <li>友方中的前朝忠良∶孝平王皇后、司馬孚</li>
 <li>起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴、高閭</li>
 <li>女王范兒：郭女王、袁女皇</li>
