完成卷134，劉宋完成

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -95,7 +95,7 @@
 <li>矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟</li>
 <li>慫：韓馥、尉建、范曄、劉義恭</li>
 <li>大腹：蕭道成</li>
-<li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香</li>
+<li>野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香、北魏王叡</li>
 <li>被污早年失德：陳平、直不疑、第五倫</li>
 <li>名廚：伊尹、易牙、毛修之</li>
 <li>狗監：楊得意</li>
