更新至卷136節6

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -88,7 +88,7 @@
 <li>空城計：叔詹、趙雲、曹操、文聘、蕭承之、王思政、祖珽、李元軌、德川家康</li>
 <li>嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄</li>
-<li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允</li>
+<li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允、高句麗王璉</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
 <li>醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
@@ -143,7 +143,7 @@
 <li>裝死大師：齊桓公、杜根</li>
 <li>裝病大師：司馬懿、衛瓘、王戎、殷景仁</li>
 <li>裝醉大師：王允之</li>
-<li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成</li>
+<li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、陳顯達、李克用、李自成</li>
 <li>黑皮: 李陵容、劉胡</li>
 <li>高頻率犯罪：劉賀、劉立</li>
 <li>背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真、姚聳夫</li>
