更新至卷137節6

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -89,6 +89,8 @@
 <li>嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄</li>
 <li>長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允、高句麗王璉</li>
+<li>熬死太子：趙佗、高句麗王璉</li>
+<li>薄葬倡導者：楊王孫、皇甫謐</li>
 <li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后</li>
 <li>二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后</li>
 <li>醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉</li>
@@ -152,7 +154,7 @@
 <li>殺兄入嫂：齊桓公、李世民</li>
 <li>狗屎運：王興、王盛、黃耇、吳平</li>
 <li>仁義之師：趙充國、漢光武帝、慕容恪</li>
-<li>奇葩爵位：羹頡侯劉信、膫侯畢取、不義侯子密、思悔侯段璣、醜侯吳質</li>
+<li>奇葩爵位：羹頡侯劉信、膫侯畢取、不義侯子密、思悔侯段璣、醜侯吳質、悖義將軍佞濁子苻承祖</li>
 <li>活人得謚號：楚義帝、漢獻帝</li>
 <li>大預言家：辛憲英、申胤、黃泓、郭黁、崔浩</li>
 <li>女反賊：呂母、遲昭平、徵側、徵貳、陳碩真</li>
